# pangonet

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: docker.yaml  publish.yaml  test.yaml
src/pangonet/: __init__.py  pangonet.py
tests/: test_pangonet.py
