[metadata]
name = pangonet
version = 0.1.0
description = Create and manipulate SARS-CoV-2 pango lineages in a phylogenetic network.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ktmeaton/pangonet
author = Katherine Eaton
author_email = ktmeaton@gmail.com
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
Bug Tracker = https://github.com/ktmeaton/pangonet/issues
License = : OSI Approved :: Apache Software License
Operating System = : OS Independent
Programming Language = : Python :: 3

[options]
packages = find:
python_requires = >=3.7
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pangonet = pangonet:cli

[options.extras_require]
test = pytest; pytest-cov